# e2e-test-20260206-014550

./: pyproject.toml
.research/: research_history.json
config/: config.yaml
config/runs/: comparative-1-flan-t5-base-gsm8k.yaml  proposed-flan-t5-base-gsm8k.yaml
src/: evaluate.py  main.py  model.py  preprocess.py  train.py
